# storage/api-docs/api-docs.json
@@ -1047,7 +1047,12 @@
                     "500": {
                         "description": "Internal server error"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/v1/admin/user-edit/{uuid}": {
